--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -27,14 +27,20 @@ jobs:
           npm start &
           sleep 5
 
-      - name: Run Cypress tests
-        run: npx cypress run --config video=true
+      - name: Prepare artifacts folder
+        run: |
+          mkdir -p artifacts
 
-      - name: Upload Cypress artifacts (videos/screenshots)
+      - name: Run Cypress tests (save logs)
+        run: npx cypress run --config video=true | tee artifacts/cypress-run.log
+
+      - name: Upload artifacts (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: cypress-artifacts
+          name: test-artifacts
           path: |
+            artifacts
             cypress/videos
             cypress/screenshots
+          if-no-files-found: warn
