--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,9 +2,9 @@ name: Cypress Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   cypress-run:
@@ -18,24 +18,33 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: "npm"
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Start application
+      - name: Prepare artifacts folder
+        run: mkdir -p artifacts
+
+      - name: Start server (log)
         run: |
-          npm start &
-          sleep 10
+          npm start > artifacts/server.log 2>&1 &
+          echo $! > artifacts/server.pid
 
-      - name: Run Cypress tests
+      - name: Wait for server
+        run: npx wait-on http://127.0.0.1:3000/api/health --timeout 60000
+
+      - name: Run Cypress tests (save log)
         run: |
-          npx cypress run || echo "Cypress finished with errors"
+          npx cypress run --config video=true 2>&1 | tee artifacts/cypress-run.log
 
-      - name: Save test artifacts
+      - name: Upload artifacts (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: cypress-artifacts
+          name: test-artifacts
           path: |
+            artifacts
             cypress/videos
             cypress/screenshots
+          if-no-files-found: warn
