--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 16
           cache: "npm"
 
       - name: Install dependencies
